--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ header a #container-logo > picture > img {
   max-width: 200px;
 }
 header div#container-menu > i {
-  font-size: 3.5em;
+  font-size: 3em;
 }
 
 main article#pasio {
@@ -246,6 +246,8 @@ footer #xarxes-container i {
   animation: aparecer 2s forwards;
   color: #fff;
   height: fit-content;
+  z-index: 99;
+  position: fixed;
 }
 #cookies button {
   all: unset;
@@ -315,7 +317,7 @@ button:hover {
   color: #000;
 }
 
-button:after:not(.cookie) {
+button:not(.cookie):after {
   content: '';
   background: var(--primary-color);
   position: absolute;
@@ -390,7 +392,7 @@ button:hover:after {
     margin-bottom: 1rem;
   }
   main article#pasio {
-    margin-top: 1rem;
+    margin-top: 2.5rem;
     margin-right: 2rem;
     flex: 1 1 700px;
     order: +1;
@@ -416,7 +418,7 @@ button:hover:after {
     background-color: var(--secondary-color);
     height: min-content;
     border-radius: 35px;
-    margin-top: 1rem;
+    margin-top: 2.5rem;
     box-shadow: inset 0px 0px 0px var(--primary-color),
       inset -5px -5px 5px var(--primary-color);
     margin-left: 5rem;
